fixed filtering issue

--- a/notebooks/02_get_references.ipynb
+++ b/notebooks/02_get_references.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
     "        'percent': 0.8,\n",
     "        'min_tests': 5\n",
     "    },\n",
-    "   Index year method configs\n",
+    "#    Index year method configs\n",
     "    {\n",
     "        'method': 'index',\n",
     "        'index_year': 2016,\n",
